samples/_failures_safe/1761628225_fac408_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3dc9a2ef.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3dc9a2ef.c:163:9: error: expected expression at end of input
  163 |         char c =
      |         ^~~~
./samples/SAFE/__tmp_3dc9a2ef.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3dc9a2ef.c:163:9: error: expected declaration or statement at end of input
